--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-xxl">
                 <div class="container container__animation">
-                  <a class="navbar-brand header_logo" href="file:///D:/Asadbek/IT/6-oy/Londin%20figma/index.html#"></a>
+                  <a class="navbar-brand header_logo" href="https://asadbek0119.github.io/EaTurkish/"></a>
                   <button
                     class="navbar-toggler"
                     type="button"
