--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav header_nav-list ms-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="header_nav-link" href="file:///D:/Asadbek/IT/6-oy/Londin%20figma/index1.html#">Menu</a>
+                        <a class="header_nav-link" href="https://asadbek0119.github.io/EaTurkish1/">Menu</a>
                       </li>
                       <li class="nav-item">
-                        <a class="header_nav-link" href="file:///D:/Asadbek/IT/6-oy/Londin%20figma/index2.html">News</a>
+                        <a class="header_nav-link" href="https://asadbek0119.github.io/EaTurkish2/">News</a>
                       </li>
                       <li class="nav-item">
-                        <a class="header_nav-link" href="file:///D:/Asadbek/IT/6-oy/Londin%20figma/index3.html#">About Us</a>
+                        <a class="header_nav-link" href="https://asadbek0119.github.io/EaTurkish3/">About Us</a>
                       </li>
                       <li class="nav-item">
-                        <a class="header_nav-link" href="file:///D:/Asadbek/IT/6-oy/Londin%20figma/index4.html?">Contact Us</a>
+                        <a class="header_nav-link" href="https://asadbek0119.github.io/EaTurkish4/">Contact Us</a>
                       </li>
                       <li class="nav-item">
                         <a class="header_nav-link log_in" href="#">Log in</a>
